# ReGen-AI

./: .env.example  AGENT_CAPABILITIES.md  AGENT_SETUP.md  IMPLEMENTATION_SUMMARY.md  README.md  WEB_SEARCH_SETUP.md  alembic.ini  check_config.py  main.py  pyproject.toml  test_agent.py  test_agent_chat.py
agent/: README.md  main_agent.py  prompt.py  tools.py
alembic/: env.py
alembic/versions/: 09a070257b1c_add_tables.py  214c6a750fab_add_user_table.py  28305d5ae9d5_test.py  4f1a2b3c4d5e_add_user_id_to_form_responses.py  9a77f189d752_add_form_responses_table.py
config/: database_config.py  env_config.py  memory_config.py
models/: tables_models.py
routes/: agent_routes.py  auth_routes.py  chat_routes.py  forme_routes.py
scripts/: create_chat_tables.py  reset_alembic_version.py  setup_chat.bat  setup_chat.sh
tests/: test_agent_endpoint.py
utiles/: jwt_utiles.py  schemas.py
